--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 <li>В сообщения в нашей <a href="https://vk.com/nshardmc">группы VK</a></li>
                 <li>
                   На нашу электронную почту
-                  <a href="mailto:nightshardserver@gmail.com">mail@example.com</a>
+                  <a href="mailto:nightshardserver@gmail.com">nightshardserver@gmail.com</a>
                 </li>
               </ul>
             </div>
